--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=pagamentos
+spring.datasource.url=jdbc:postgresql://localhost:5432/alura-food_pagamentos?createDatabase=true
+spring.datasource.username=${POSTGRES_DB_USER}
+spring.datasource.password=${POSTGRES_DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+server.error.include-stacktrace=never
