Adicionando Eureka Client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-stacktrace=never
+
+spring.application.name=alura-food-pagamentos
+eureka.cliente.serviceUrl.defaultZone=http://localhost:8081/eureka
+server.port=0
