--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-stacktrace=never
 
-spring.application.name=alura-food-pagamentos
-eureka.cliente.serviceUrl.defaultZone=http://localhost:8081/eureka
+spring.application.name=pagamentos-ms
+eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
 server.port=0
