Ajustando configurações para o Eureka Client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/alura-food_pagamentos?createDatabase=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/alura-food_pagamentos
 spring.datasource.username=${POSTGRES_DB_USER}
 spring.datasource.password=${POSTGRES_DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -8,6 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-stacktrace=never
 
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 spring.application.name=pagamentos-ms
 eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
+
 server.port=0
