Adicionando configurações de cuircuit breaker ao servico pagamentos-ms

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,10 @@ spring.application.name=pagamentos-ms
 eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
 
 server.port=0
+
+# Sliding Window Size: quantidade de chamadas que serão consideradas para o cálculo do estado do circuit breaker
+resilience4j.circuitbreaker.instances.atualizaPedido.sliding-window-size=3
+# Minimum Number of Calls: quantidade mínima de chamadas para que o circuit breaker entre em ação
+resilience4j.circuitbreaker.instances.atualizaPedido.minimum-number-of-calls=2
+# Wait Duration In Open State: tempo que o circuit breaker ficará aberto antes de tentar uma nova chamada
+resilience4j.circuitbreaker.instances.atualizaPedido.wait-duration-in-open-state=50s
