--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,11 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-stacktrace=never
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 spring.application.name=pagamentos-ms
